--- a/main/templates/main/page1.html
+++ b/main/templates/main/page1.html
@@ -34,19 +34,15 @@
                             <div class="sb-sidenav-menu-heading">CATEGORY</div>
                             <a class="nav-link" href="{% url 'page1'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                DateSet
                             </a>
                             <a class="nav-link" href="{% url 'page2'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                WinRate EDA
                             </a>
                             <a class="nav-link" href="{% url 'page3'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
-                            </a>
-                            <a class="nav-link" href="{% url 'page4'%}">
-                                <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                CS EDA
                             </a>
         
                         </div>
@@ -57,7 +53,9 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <img src="{% static 'main/image/Dater.PNG' %}" style="width: 90%; height: 200px;">
+                        <img src="{% static 'main/image/Dater.PNG' %}" style="width: 100%; height: 200px;">
+                        <img src="{% static 'main/image/column.PNG' %}" style="width: 90%; height: 400px;">
+                        <img src="{% static 'main/image/dateset.PNG' %}" style="width: 100%; height: 400px;">
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
