--- a/main/templates/main/page2.html
+++ b/main/templates/main/page2.html
@@ -34,21 +34,16 @@
                             <div class="sb-sidenav-menu-heading">CATEGORY</div>
                             <a class="nav-link" href="{% url 'page1'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                DateSet
                             </a>
                             <a class="nav-link" href="{% url 'page2'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                WinRate EDA
                             </a>
                             <a class="nav-link" href="{% url 'page3'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                CS EDA
                             </a>
-                            <a class="nav-link" href="{% url 'page4'%}">
-                                <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
-                            </a>
-        
                         </div>
                     </div>
                     
@@ -56,7 +51,13 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
-                    
+                    <div class="container-fluid px-4">
+                        <img src="{% static 'main/image/page2title.PNG' %}" style="width: 100%; height: 200px;">
+                        <img src="{% static 'main/image/bluegolddiff.PNG' %}" style="width: 70%; height: 240px;">
+                        <img src="{% static 'main/image/bluegolddiffgraph.PNG' %}" style="width: 100%; height: 1000px;">
+                        <img src="{% static 'main/image/lowcorr.PNG' %}" style="width: 100%; height: 1000px;">
+                        <img src="{% static 'main/image/lowcorr2.PNG' %}" style="width: 100%; height: 200px;">
+                    </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
