--- a/main/templates/main/page3.html
+++ b/main/templates/main/page3.html
@@ -34,21 +34,16 @@
                             <div class="sb-sidenav-menu-heading">CATEGORY</div>
                             <a class="nav-link" href="{% url 'page1'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                DateSet
                             </a>
                             <a class="nav-link" href="{% url 'page2'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                WinRate EDA
                             </a>
                             <a class="nav-link" href="{% url 'page3'%}">
                                 <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                CS EDA
                             </a>
-                            <a class="nav-link" href="{% url 'page4'%}">
-                                <div class=><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
-                            </a>
-        
                         </div>
                     </div>
                     
@@ -56,7 +51,14 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
-                    
+                    <div class="container-fluid px-4">
+                        <img src="{% static 'main/image/page3topic.PNG' %}" style="width: 100%; height: 200px;">
+                        <img src="{% static 'main/image/bluewardsplaced.PNG' %}" style="width: 40%; height: 80px;">
+                        <img src="{% static 'main/image/result.PNG' %}" style="width: 90%; height: 300px;">
+                        <img src="{% static 'main/image/redcspermin.PNG' %}" style="width: 100%; height: 90px;">
+                        <img src="{% static 'main/image/redcspermincorr.PNG' %}" style="width: 100%; height: 250px;">
+                        <img src="{% static 'main/image/topic4.PNG' %}" style="width: 100%; height: 400px;">
+                    </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
